fixed the window overflow issue and rubber banding caused by umenu

--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -4,9 +4,9 @@ $accent: rgb(206 229 232);
 $background: rgb(51 51 51);
 $background-lighter: rgb(57 57 57);
 $background-gradient: linear-gradient(to top, rgb(51 51 51) 0%, rgb(76 76 76) 100%);
-$background-inactive: rgb(180 157 124);
+$background-inactive: rgb(151 126 109);
 $foreground: rgb(128 128 128);
-$foreground-inactive: rgb(151 126 109);
+$foreground-inactive: rgb(180 157 124);
 $negative-space: rgb(89 89 89);
 $red: rgb(253 183 170);
 $white: rgb(247 247 247);
